[gd_scene load_steps=2 format=3 uid="uid://c06u82ov4p65c"]

[ext_resource type="Script" path="res://duckingtest.gd" id="1_y15ba"]

[node name="duckingtest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y15ba")

[node name="SoundList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 65.0
offset_right = 416.0
offset_bottom = 405.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MusicList" type="ItemList" parent="."]
layout_mode = 1
offset_left = 731.0
offset_top = 63.0
offset_right = 1064.0
offset_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Settings" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 741.0
offset_top = 312.0
offset_right = 917.0
offset_bottom = 483.0
columns = 2

[node name="Label" type="Label" parent="Settings"]
layout_mode = 2
text = "Delay"

[node name="delay" type="LineEdit" parent="Settings"]
layout_mode = 2
text = "0.05"
context_menu_enabled = false
virtual_keyboard_enabled = false

[node name="Label3" type="Label" parent="Settings"]
layout_mode = 2
text = "Attack"

[node name="attack" type="LineEdit" parent="Settings"]
layout_mode = 2
text = "1"
context_menu_enabled = false
virtual_keyboard_enabled = false

[node name="Label2" type="Label" parent="Settings"]
layout_mode = 2
text = "Attenuation"

[node name="attenuation" type="LineEdit" parent="Settings"]
layout_mode = 2
text = "8.5"
context_menu_enabled = false
virtual_keyboard_enabled = false

[node name="Label4" type="Label" parent="Settings"]
layout_mode = 2
text = "Release Point"

[node name="release_point" type="LineEdit" parent="Settings"]
layout_mode = 2
text = "0.5"
context_menu_enabled = false
virtual_keyboard_enabled = false

[node name="Label5" type="Label" parent="Settings"]
layout_mode = 2
text = "Release "

[node name="release" type="LineEdit" parent="Settings"]
layout_mode = 2
text = "0.5"
context_menu_enabled = false
virtual_keyboard_enabled = false

[node name="Files" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 43.0
offset_top = 471.0
offset_right = 83.0
offset_bottom = 511.0
columns = 2

[node name="Label" type="Label" parent="Files"]
layout_mode = 2
text = "Source Folder"

[node name="SourceFolder" type="Button" parent="Files"]
layout_mode = 2
text = "None"

[node name="Label3" type="Label" parent="Files"]
layout_mode = 2
text = "Music Folder"

[node name="MusicFolder" type="Button" parent="Files"]
layout_mode = 2
text = "None"

[node name="Label2" type="Label" parent="Files"]
layout_mode = 2
text = "Data File"

[node name="DataFile" type="Button" parent="Files"]
layout_mode = 2
text = "None"

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.296
anchor_bottom = 0.5
offset_left = 852.0
offset_top = 511.0
offset_right = 558.008
offset_bottom = 218.0
text = "PLAY"
